Refactored code, deleted redundant code, tests written, coverage and README added

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,4 +13,4 @@ python_files = test_*.py
 #  - --cov=.           : measure coverage for the repo root
 #  - --cov-report=term-missing:skip-covered  : show missing lines in terminal (skip files fully covered)
 #  - --cov-report=xml:coverage.xml           : write XML coverage file for CI tools
-addopts = -v -r a --maxfail=1 --showlocals --color=yes --cov=. --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml
+addopts = -v -r a --maxfail=1 --showlocals --color=yes --cov=app --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml
